# zentinel-agent-wasm

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
examples/wasm-module/: Cargo.toml
examples/wasm-module/src/: lib.rs
src/: lib.rs  main.rs
tests/: integration.rs
