[package]
name = "sentinel-agent-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Sentinel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/raskell-io/sentinel-agent-wasm"
homepage = "https://sentinel.raskell.io"
documentation = "https://sentinel.raskell.io/docs/agents/wasm"
description = "WebAssembly agent for Sentinel reverse proxy - run Wasm modules for request/response processing"
keywords = ["proxy", "reverse-proxy", "agent", "wasm", "webassembly"]
categories = ["network-programming", "wasm"]
readme = "README.md"

[lib]
name = "sentinel_agent_wasm"
path = "src/lib.rs"

[[bin]]
name = "sentinel-wasm-agent"
path = "src/main.rs"

[dependencies]
# Sentinel protocol
sentinel-agent-protocol = { path = "../sentinel/crates/agent-protocol" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# WebAssembly runtime
wasmtime = "27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Command line
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3.12"
uuid = { version = "1.10", features = ["v4"] }
