[package]
name = "zentinel-agent-wasm"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Zentinel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel-agent-wasm"
homepage = "https://zentinelproxy.io"
documentation = "https://zentinelproxy.io/docs/agents/wasm"
description = "WebAssembly agent for Zentinel reverse proxy - run Wasm modules for request/response processing"
keywords = ["proxy", "reverse-proxy", "agent", "wasm", "webassembly"]
categories = ["network-programming", "wasm"]
readme = "README.md"

[lib]
name = "zentinel_agent_wasm"
path = "src/lib.rs"

[[bin]]
name = "zentinel-wasm-agent"
path = "src/main.rs"

[dependencies]
# Zentinel protocol
zentinel-agent-protocol = "0.5"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# WebAssembly runtime
wasmtime = "27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Command line
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3.12"
uuid = { version = "1.10", features = ["v4"] }
